--- a/IIMAroad.html
+++ b/IIMAroad.html
@@ -362,13 +362,13 @@
         <div class="container">
             <div id="gallery" class="container-fluid">
                 <div class="popup">
-                    <img src="./location3/01.webp" class="img-responsive" alt="IIM-A Road_img">
-                    <img src="./location3/02.webp" class="img-responsive" alt="IIM-A Road_img">
-                    <img src="./location3/03.webp" class="img-responsive" alt="IIM-A Road_img">
-                    <img src="./location3/04.webp" class="img-responsive" alt="IIM-A Road_img">
-                    <img src="./location3/05.webp" class="img-responsive" alt="IIM-A Road_img">
-                    <img src="./location3/06.webp" class="img-responsive" alt="IIM-A Road_img">
-                    <img src="./location3/07.webp" class="img-responsive" alt="IIM-A Road_img">
+                    <img src="./iim-road-img/iim-road-img1.webp" class="img-responsive" alt="IIM-A Road_img">
+                    <img src="./iim-road-img/iim-road-img2.webp" class="img-responsive" alt="IIM-A Road_img">
+                    <img src="./iim-road-img/iim-road-img3.webp" class="img-responsive" alt="IIM-A Road_img">
+                    <img src="./iim-road-img/iim-road-img4.webp" class="img-responsive" alt="IIM-A Road_img">
+                    <img src="./iim-road-img/iim-road-img5.webp" class="img-responsive" alt="IIM-A Road_img">
+                    <img src="./iim-road-img/iim-road-img6.webp" class="img-responsive" alt="IIM-A Road_img">
+                    <img src="./iim-road-img/iim-road-img7.webp" class="img-responsive" alt="IIM-A Road_img">
                 </div>
                 <div class="showover">
                     <div class="overlay"></div>
@@ -442,7 +442,7 @@
                                         <br> <br>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="../images/office day.jpg" class="d-block w-100"
+                                        <img src="./images/office day.jpg" class="d-block w-100"
                                             alt="bsquare-blog-img"><br>
                                         <h6 style="color: white; font-size: 14px;">Flexi Office Solutions: The Strategic
                                             Gamble Driving Big Revenue Boosts...</h6>
