--- a/navrangpura.html
+++ b/navrangpura.html
@@ -424,7 +424,7 @@
                                         <br> <br>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="../images/office day.jpg" class="d-block w-100"
+                                        <img src="./images/office day.jpg" class="d-block w-100"
                                             alt="bsquare-blog-img"><br>
                                         <h6 style="color: white; font-size: 14px;">Flexi Office Solutions: The Strategic
                                             Gamble Driving Big Revenue Boosts...</h6>
