--- a/Blogs.html
+++ b/Blogs.html
@@ -400,7 +400,7 @@
                                         <br> <br>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="../images/office day.jpg" class="d-block w-100"
+                                        <img src="./images/office day.jpg" class="d-block w-100"
                                             alt="bsquare-blog-img"><br>
                                         <h6 style="color: white; font-size: 14px;">Flexi Office Solutions: The Strategic
                                             Gamble Driving Big Revenue Boosts...</h6>
@@ -486,7 +486,7 @@
                             </div>
                             <ul class="p-0">
                                 <li><a href="./index.html">Home</a></li>
-                                <li><a href="./blogs.html">Blogs.html</a></li>
+                                <li><a href="./blogs.html">Blogs</a></li>
 
                                 <li><a href="./facilities.html">Facilities</a></li>
                                 <li><a href="./careers.html">Careers</a></li>
