--- a/Careers.html
+++ b/Careers.html
@@ -367,23 +367,29 @@
                                     <div class="carousel-item active" data-bs-interval="10000">
                                         <img src="./images/teamwork.jpg" class="d-block w-100" alt="...">
                                         <br>
+                                        <h6 style="color: white; font-size: 14px;">5 Reasons Why Flexible Office Spaces and Co-Working Spaces are The Next Big Thing...</h6>
                                         <a href="bsquareblog.html?content=link4">Read More</a>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
                                         <img src="./images/01.jpg" class="d-block w-100" alt="...">
                                         <br>
+                                        <h6 style="color: white; font-size: 14px;">All You Need to Know About BSQUARE Coworking Space...</h6>
                                         <a href="bsquareblog.html?content=link1">Read More</a>
                                         <br> <br>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./location1/9-9.jpg" class="d-block w-100" alt="...">
+                                        <img src="./westgate-img/bsquare-westgate-img9.jpg" class="d-block w-100" alt="...">
                                         <br>
+                                        <h6 style="color: white; font-size: 14px;">The Co-working Revolution: Transforming Real Estate and Redefining
+                                            Workspaces...</h6>
                                         <a href="bsquareblog.html?content=link2">Read More</a>
                                         <br> <br>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="../images/office day.jpg" class="d-block w-100" alt="...">
+                                        <img src="./images/office day.jpg" class="d-block w-100" alt="...">
                                         <br>
+                                        <h6 style="color: white; font-size: 14px;">Flexi Office Solutions: The Strategic
+                                            Gamble Driving Big Revenue Boosts...</h6>
                                         <a href="bsquareblog.html?content=link3">Read More</a>
                                         <br> <br>
                                     </div>
