poster change all page

--- a/facilities.html
+++ b/facilities.html
@@ -397,19 +397,16 @@
     </header>
 
 
-    <div id="header">
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./images/backposters/aminitiesPoster.png" class="d-block w-100"
-                        alt="amenities-img-bsquare">
-                    <div class="title">
-                        <h1 class="animated slideInDown"><span>A workspace that has all the facilities and amenities
-                                necessary for your business</span></h1>
-                        <h2 class="animated slideInLeft"></h2>
-                    </div>
-                </div>
+    <div id="mainBanner" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
+        <div class="carousel-inner">
 
+            <div class="carousel-item active" data-bs-interval="7000">
+                <img src="./images/backposters/aminitiesPoster.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption px-md-5">
+                    <h5>A workspace that has all the facilities and<br> amenities necessary for your business</h5>
+                    <hr class="bg-light border-4 border-top border-light">
+
+                </div>
             </div>
 
         </div>
