--- a/s.g.road.html
+++ b/s.g.road.html
@@ -245,19 +245,19 @@
         </nav>
     </header>
 
-    <div id="header">
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./images//backposters/27.png" class="d-block w-100" alt="s.g.road-img-bsquare">
-                    <div class="title">
-                        <h1 class="animated slideInDown"><span>S.G.Road</span></h1>
-                        <h2 class="animated slideInLeft mt-3 p-2" style="font-size: 17px;"><span>Sustainability in
-                                Coworking Spaces</span></h2>
-                    </div>
-                </div>
+    <div id="mainBanner" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
+        <div class="carousel-inner">
 
+            <div class="carousel-item active" data-bs-interval="7000">
+                <img src="./images/backposters/27.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption px-md-5">
+                    <h5>S.G.Road<br>
+                        <span class="tagline">(Sustainability in Coworking Spaces)</span></h5>
+                    <hr class="bg-light border-4 border-top border-light">
+
+                </div>
             </div>
+
         </div>
     </div>
 
