--- a/blogs.html
+++ b/blogs.html
@@ -143,6 +143,8 @@
         transition: .4s;
         box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
     }
+
+
 </style>
 
 <body>
@@ -211,17 +213,16 @@
             </div>
         </nav>
     </header>
-    <div id="header">
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./images/backposters/b8.JPG" class="d-block w-100" alt="blog-img-bsquare">
-                    <div class="title">
-                        <h1 class="animated slideInDown"><span>Blogs</span></h1>
-                        <h2 class="animated slideInLeft"></h2>
-                    </div>
-                </div>
+    <div id="mainBanner" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
+        <div class="carousel-inner">
 
+            <div class="carousel-item active" data-bs-interval="7000">
+                <img src="./images/backposters/b8.JPG" class="d-block w-100" alt="...">
+                <div class="carousel-caption px-md-5">
+                    <h5>Bsquare's Coworking Insights</h5>
+                    <hr class="bg-light border-4 border-top border-light">
+
+                </div>
             </div>
 
         </div>
@@ -377,14 +378,17 @@
                                     <div class="carousel-item active" data-bs-interval="10000">
                                         <img src="./images/teamwork.jpg" class="d-block w-100" alt="bsquare-blog-img">
                                         <br>
-                                        <h6 style="color: white; font-size: 14px;">5 Reasons Why Flexible Office Spaces and Co-Working Spaces are The Next Big Thing...</h6>
+                                        <h6 style="color: white; font-size: 14px;">5 Reasons Why Flexible Office Spaces
+                                            and Co-Working Spaces are The Next Big Thing...</h6>
                                         <br>
                                         <a href="bsquareblog.html?bsquare=bsquare-reasons-why-flexible-office-spaces"
                                             target="_bquare">Read More</a>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
                                         <img src="./images/01.jpg" class="d-block w-100" alt="bsquare-blog-img">
-                                        <br><h6 style="color: white; font-size: 14px;">All You Need to Know About BSQUARE Coworking Space...</h6>
+                                        <br>
+                                        <h6 style="color: white; font-size: 14px;">All You Need to Know About BSQUARE
+                                            Coworking Space...</h6>
                                         <br>
                                         <a href="bsquareblog.html?bsquare=bsquare-coworking-space-blog"
                                             target="_bquare">Read More</a>
@@ -393,7 +397,8 @@
                                     <div class="carousel-item" data-bs-interval="2000">
                                         <img src="./westgate-img/bsquare-westgate-img9.jpg" class="d-block w-100"
                                             alt="bsquare-blog-img"><br>
-                                        <h6 style="color: white; font-size: 14px;">The Co-working Revolution: Transforming Real Estate and Redefining
+                                        <h6 style="color: white; font-size: 14px;">The Co-working Revolution:
+                                            Transforming Real Estate and Redefining
                                             Workspaces...</h6>
 
                                         <br>
