--- a/bsquareblog.html
+++ b/bsquareblog.html
@@ -815,18 +815,16 @@
             </div>
         </div>
     </nav>
-    <div id="header">
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./images/backposters/b9.jpg" class="d-block w-100" alt="...">
-                    <div class="title">
-                        <h1 class="animated slideInDown"><span>Our Blogs</span>
-                        </h1>
-                        <h2 class="animated slideInLeft"></h2>
-                    </div>
-                </div>
+    <div id="mainBanner" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
+        <div class="carousel-inner">
 
+            <div class="carousel-item active" data-bs-interval="7000">
+                <img src="./images/backposters/b8.JPG" class="d-block w-100" alt="...">
+                <div class="carousel-caption px-md-5">
+                    <h5>Bsquare's Coworking Insights</h5>
+                    <hr class="bg-light border-4 border-top border-light">
+
+                </div>
             </div>
 
         </div>
