--- a/iimaroad.html
+++ b/iimaroad.html
@@ -271,31 +271,19 @@
         </nav>
     </header>
 
-    <div id="header">
-        <div id="carouselExampleControls" class="carousel slide pc" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./images/backposters/28 (1).png" class="d-block w-100" alt="bsquarecoworkingspace">
-                    <div class="title">
-                        <h1 class="animated slideInDown"><span>IIM-A Road</span></h1>
-                        <h2 class="animated slideInLeft mt-3 p-2" style="font-size: 17px;"><span>Choosing the Right
-                                Coworking Space</span></h2>
-                    </div>
+    <div id="mainBanner" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
+        <div class="carousel-inner">
+
+            <div class="carousel-item active" data-bs-interval="7000">
+                <img src="./images/backposters/28 (1).png" class="d-block w-100" alt="...">
+                <div class="carousel-caption px-md-5">
+                    <h5>IIM-A Road <br>
+                        <span class="tagline">(Choosing the Right Coworking Space)</span></h5>
+                    <hr class="bg-light border-4 border-top border-light">
+
                 </div>
             </div>
-        </div>
-        <div id="carouselExampleControls" class="carousel slide d-md-block d-lg-none" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./images/backposters/mobiles banner/4.png" class="d-block w-100"
-                        alt="bsquarecoworkingspace">
-                    <div class="title">
-                        <h1 class="animated slideInDown"><span>IIM-A Road</span></h1>
-                        <h2 class="animated slideInLeft mt-3 p-2" style="font-size: 17px;"><span>Choosing the Right
-                                Coworking Space</span></h2>
-                    </div>
-                </div>
-            </div>
+
         </div>
     </div>
     <div class="container">
