--- a/prahladnagar.html
+++ b/prahladnagar.html
@@ -212,24 +212,20 @@
         </nav>
     </header>
 
-    <div id="header">
+    <div id="mainBanner" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
+        <div class="carousel-inner">
 
-        <div id="carouselExampleControls" class="carousel slide  d-lg-block" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./images/backposters/26.png" class="d-block w-100" alt="prahladnagar-img-bsquare">
+            <div class="carousel-item active" data-bs-interval="7000">
+                <img src="./images/backposters/26.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption px-md-5">
+                    <h5>PrahladNagar corporate Road<br>
+                        <span class="tagline">(Collaborative Events and Workshops in Coworking Spaces)</span></h5>
+                    <hr class="bg-light border-4 border-top border-light">
 
-
-                    <div class="title">
-                        <h1 class="animated slideInDown"><span>PrahladNagar corporate Road</span></h1>
-
-                        <h2 class="animated slideInLeft mt-3 p-2" style="font-size: 17px;"><span>Collaborative Events
-                                and Workshops in Coworking Spaces<span></h2>
-                    </div>
                 </div>
             </div>
-        </div>
 
+        </div>
     </div>
 
     <div class="container">
