--- a/workspace.html
+++ b/workspace.html
@@ -245,18 +245,18 @@
         </nav>
     </header>
 
-    <div id="header">
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./images/backposters/36.png" class="d-block w-100" alt="workspace-img-bsquare">
-                    <div class="title">
-                        <h1 class="animated slideInDown"><span>Explore our versatile Office Spaces as per your
-                                requirement</span></h1>
-                        <h2 class="animated slideInLeft"></h2>
-                    </div>
+    <div id="mainBanner" class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
+        <div class="carousel-inner">
+
+            <div class="carousel-item active" data-bs-interval="7000">
+                <img src="./images/backposters/36.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption px-md-5">
+                    <h5>Explore our versatile Office<br> Spaces as per your requirement</h5>
+                    <hr class="bg-light border-4 border-top border-light">
+
                 </div>
             </div>
+
         </div>
     </div>
 
