--- a/blogs.html
+++ b/blogs.html
@@ -179,20 +179,20 @@
                                         Locations
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                                        <a class="dropdown-item" href="./prahladnagar.html">Prahlad Nagar Corporate
+                                        <a class="dropdown-item" href="./prahlad-nagar.html">Prahlad Nagar Corporate
                                             Road</a>
                                         <a class="dropdown-item" href="./s.g.road.html">S.G.Road</a>
 
-                                        <a class="dropdown-item" href="./iimaroad.html">IIM A Road</a>
+                                        <a class="dropdown-item" href="./iim-a-road.html">IIM A Road</a>
                                         <a class="dropdown-item" href="./navrangpura.html">Navrangpura</a>
-                                        <a class="dropdown-item" href="./sindhubhawan.html">Sindhu Bhawan</a>
+                                        <a class="dropdown-item" href="./sindhu-bhawan.html">Sindhu Bhawan</a>
                                     </div>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" aria-current="page" href="./workspace.html">Workspace</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./facilities.html">Amenities</a>
+                                    <a class="nav-link" href="./amenities.html">Amenities</a>
                                 </li>
 
                                 <li class="nav-item">
@@ -254,7 +254,7 @@
                             There are a lot of reasons for the same. Managing a huge office space ...
                         </p> <br><br>
 
-                        <a href="bsquareblog.html?bsquare=bsquare-reasons-why-flexible-office-spaces"
+                        <a href="bsquare-blog.html?bsquare=bsquare-reasons-why-flexible-office-spaces"
                             target="_bquare">Read More</a>
                     </div>
                 </div>
@@ -273,7 +273,7 @@
 
                         </p> <br><br>
 
-                        <a href="bsquareblog.html?bsquare=bsquare-coworking-space-blog" target="_bquare">Read More</a>
+                        <a href="bsquare-blog.html?bsquare=bsquare-coworking-space-blog" target="_bquare">Read More</a>
                     </div>
                 </div>
                 <div class="col-xl-6 col-md-12">
@@ -303,7 +303,7 @@
                             change is the booming trend of co-working spaces...
                         </p> <br><br>
 
-                        <a href="bsquareblog.html?bsquare=bsquare-coworking-revolution-blog" target="_bquare">Read
+                        <a href="bsquare-blog.html?bsquare=bsquare-coworking-revolution-blog" target="_bquare">Read
                             More</a>
                     </div>
                 </div>
@@ -321,7 +321,7 @@
                             strategic bet that's not just about providing office space but ...
                         </p> <br><br>
 
-                        <a href="bsquareblog.html?bsquare=bsquare-flexi-office-solutions-blog" target="_bquare">Read
+                        <a href="bsquare-blog.html?bsquare=bsquare-flexi-office-solutions-blog" target="_bquare">Read
                             More</a>
                     </div>
                 </div>
@@ -381,7 +381,7 @@
                                         <h6 style="color: white; font-size: 14px;">5 Reasons Why Flexible Office Spaces
                                             and Co-Working Spaces are The Next Big Thing...</h6>
                                         <br>
-                                        <a href="bsquareblog.html?bsquare=bsquare-reasons-why-flexible-office-spaces"
+                                        <a href="bsquare-blog.html?bsquare=bsquare-reasons-why-flexible-office-spaces"
                                             target="_bquare">Read More</a>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
@@ -390,7 +390,7 @@
                                         <h6 style="color: white; font-size: 14px;">All You Need to Know About BSQUARE
                                             Coworking Space...</h6>
                                         <br>
-                                        <a href="bsquareblog.html?bsquare=bsquare-coworking-space-blog"
+                                        <a href="bsquare-blog.html?bsquare=bsquare-coworking-space-blog"
                                             target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
@@ -402,7 +402,7 @@
                                             Workspaces...</h6>
 
                                         <br>
-                                        <a href="bsquareblog.html?bsquare=bsquare-coworking-revolution-blog"
+                                        <a href="bsquare-blog.html?bsquare=bsquare-coworking-revolution-blog"
                                             target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
@@ -412,7 +412,7 @@
                                         <h6 style="color: white; font-size: 14px;">Flexi Office Solutions: The Strategic
                                             Gamble Driving Big Revenue Boosts...</h6>
                                         <br>
-                                        <a href="bsquareblog.html?bsquare=bsquare-flexi-office-solutions-blog"
+                                        <a href="bsquare-blog.html?bsquare=bsquare-flexi-office-solutions-blog"
                                             target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
@@ -495,7 +495,7 @@
                                 <li><a href="./index.html">Home</a></li>
                                 <li><a href="./blogs.html">Blogs</a></li>
 
-                                <li><a href="./facilities.html">Facilities</a></li>
+                                <li><a href="./amenities.html">Amenities</a></li>
                                 <li><a href="./careers.html">Careers</a></li>
 
                                 <li><a href="./gallery.html">Gallery</a></li>
