--- a/index.html
+++ b/index.html
@@ -406,20 +406,20 @@
                                         Locations
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                                        <a class="dropdown-item" href="./prahladnagar.html">Prahlad Nagar Corporate
+                                        <a class="dropdown-item" href="./prahlad-nagar.html">Prahlad Nagar Corporate
                                             Road</a>
                                         <a class="dropdown-item" href="./s.g.road.html">S.G.Road</a>
 
-                                        <a class="dropdown-item" href="./iimaroad.html">IIM A Road</a>
+                                        <a class="dropdown-item" href="./iim-a-road.html">IIM A Road</a>
                                         <a class="dropdown-item" href="./navrangpura.html">Navrangpura</a>
-                                        <a class="dropdown-item" href="./sindhubhawan.html">Sindhu Bhawan</a>
+                                        <a class="dropdown-item" href="./sindhu-bhawan.html">Sindhu Bhawan</a>
                                     </div>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" aria-current="page" href="./workspace.html">Workspace</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./facilities.html">Amenities</a>
+                                    <a class="nav-link" href="./amenities.html">Amenities</a>
                                 </li>
 
                                 <li class="nav-item">
@@ -1073,14 +1073,14 @@
                                         <br>
                                         <h6 style="color: white; font-size: 14px;">5 Reasons Why Flexible Office Spaces and Co-Working Spaces are The Next Big Thing...</h6>
                                         <br>
-                                        <a href="bsquareblog.html?bsquare=bsquare-reasons-why-flexible-office-spaces"
+                                        <a href="bsquare-blog.html?bsquare=bsquare-reasons-why-flexible-office-spaces"
                                             target="_bquare">Read More</a>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
                                         <img src="./images/01.jpg" class="d-block w-100" alt="bsquare-blog-img">
                                         <br><h6 style="color: white; font-size: 14px;">All You Need to Know About BSQUARE Coworking Space...</h6>
                                         <br>
-                                        <a href="bsquareblog.html?bsquare=bsquare-coworking-space-blog"
+                                        <a href="bsquare-blog.html?bsquare=bsquare-coworking-space-blog"
                                             target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
@@ -1091,7 +1091,7 @@
                                             Workspaces...</h6>
 
                                         <br>
-                                        <a href="bsquareblog.html?bsquare=bsquare-coworking-revolution-blog"
+                                        <a href="bsquare-blog.html?bsquare=bsquare-coworking-revolution-blog"
                                             target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
@@ -1101,7 +1101,7 @@
                                         <h6 style="color: white; font-size: 14px;">Flexi Office Solutions: The Strategic
                                             Gamble Driving Big Revenue Boosts...</h6>
                                         <br>
-                                        <a href="bsquareblog.html?bsquare=bsquare-flexi-office-solutions-blog"
+                                        <a href="bsquare-blog.html?bsquare=bsquare-flexi-office-solutions-blog"
                                             target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
@@ -1178,7 +1178,7 @@
                                 <li><a href="./index.html">Home</a></li>
                                 <li><a href="./blogs.html">Blogs</a></li>
 
-                                <li><a href="./facilities.html">Facilities</a></li>
+                                <li><a href="./amenities.html">Amenities</a></li>
                                 <li><a href="./careers.html">Careers</a></li>
 
                                 <li><a href="./gallery.html">Gallery</a></li>
