--- a/sindhu-bhawan.html
+++ b/sindhu-bhawan.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
 </head>
 <style>
     #header {
@@ -65,8 +66,13 @@
         height: 100%;
     }
 
+
+
+
+
     #gallery img,
     #gallery video {
+
         width: 100%;
         height: auto;
         /* margin: 4% auto; */
@@ -75,6 +81,9 @@
         -webkit-transition: all 0.2s;
         transition: all 0.2s;
     }
+
+
+
 
 
     #location {
@@ -176,34 +185,6 @@
         transition: .4s;
         box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
     }
-
-    .degree_view a {
-        text-decoration: none;
-        background-color: #0086c4;
-        color: white;
-        padding: 3px 8px;
-        font-size: 20px;
-        border-radius: 3px;
-        width: 50%;
-        text-align: center;
-        margin: auto;
-        transition: .5s;
-
-    }
-
-    .degree_view a:hover {
-        text-decoration: none;
-        background-color: #000000;
-        color: white;
-        padding: 3px 8px;
-        font-size: 20px;
-        border-radius: 3px;
-        width: 50%;
-        text-align: center;
-        margin: auto;
-        transition: .5s;
-
-    }
 </style>
 
 <body>
@@ -213,7 +194,7 @@
                 <div class="container main_nav_container justify-content-center">
                     <div class="d-flex flex-row justify-content-between inner_div">
                         <a class="navbar-brand" href="./index.html">
-                            <img src="./images/BSquare logo without bg.png" alt="Bsquare"></a>
+                            <img src="./images/BSquare logo without bg.png" alt="bsquare-logo"></a>
                         <button class="navbar-toggler " type="button" data-bs-toggle="offcanvas"
                             data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2">
                             <span class="bi bi-list "></span>
@@ -222,7 +203,7 @@
                     <div class="offcanvas offcanvas-end text-bg-light m-auto" tabindex="-1" id="offcanvasNavbar2"
                         aria-labelledby="offcanvasNavbar2Label">
                         <div class="offcanvas-header">
-                            <h5 class="offcanvas-title" id="offcanvasNavbar2Label"><img src="./images/logo2.png" alt="">
+                            <h5 class="offcanvas-title" id="offcanvasNavbar2Label"><img src="./images/logo2.png" alt="bsquare-logo">
                             </h5>
                             <button type="button" class="btn-close btn-close-dark" data-bs-dismiss="offcanvas"
                                 aria-label="Close"></button>
@@ -237,19 +218,19 @@
                                         Locations
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                                        <a class="dropdown-item" href="./prahladnagar.html">Prahlad Nagar Corporate
+                                        <a class="dropdown-item" href="./prahlad-nagar.html">Prahlad Nagar Corporate
                                             Road</a>
                                         <a class="dropdown-item" href="./s.g.road.html">S.G.Road</a>
-                                        <a class="dropdown-item" href="./iimaroad.html">IIM A Road</a>
+                                        <a class="dropdown-item" href="./iim-a-road.html">IIM A Road</a>
                                         <a class="dropdown-item" href="./navrangpura.html">Navrangpura</a>
-                                        <a class="dropdown-item" href="./sindhubhawan.html">Sindhu Bhawan</a>
+                                        <a class="dropdown-item" href="./sindhu-bhawan.html">Sindhu Bhawan</a>
                                     </div>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" aria-current="page" href="./workspace.html">Workspace</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./facilities.html">Amenities</a>
+                                    <a class="nav-link" href="./amenities.html">Amenities</a>
                                 </li>
 
                                 <li class="nav-item">
@@ -261,7 +242,6 @@
                                 <li class="nav-item" style="display: flex; align-items: center;">
                                     <a class="nav-link" href="tel:+91 9925122772">+91&nbsp;9925122772</a>
                                 </li>
-
                             </ul>
 
                         </div>
@@ -275,10 +255,10 @@
         <div class="carousel-inner">
 
             <div class="carousel-item active" data-bs-interval="7000">
-                <img src="./images/backposters/28 (1).png" class="d-block w-100" alt="...">
+                <img src="./images/backposters/30 (1).png" class="d-block w-100" alt="...">
                 <div class="carousel-caption px-md-5">
-                    <h5>IIM-A Road <br>
-                        <span class="tagline">(Choosing the Right Coworking Space)</span></h5>
+                    <h5>Sindhu Bhawan<br>
+                        <span class="tagline">(Legal and Contractual Aspects of Coworking)</span></h5>
                     <hr class="bg-light border-4 border-top border-light">
 
                 </div>
@@ -289,7 +269,7 @@
     <div class="container">
         <div class="section_padding"></div>
         <div class="container">
-            <h2 class="heading_style">IIM-A Road <br>
+            <h2 class="heading_style">Sindhu Bhawan <br>
             </h2>
             <hr class="hr m-auto">
         </div>
@@ -297,9 +277,13 @@
         <br><br>
         <div class="row mb-5" id="location">
             <div class="col-xl-6 col-md-12 ">
-                <h4 class="heading_style"><span>IIM-A Road</span> BSQUARE Coworking Space</h4>
-                <p>403, 404, 405, 406, 4th Floor, 3rd Eye Vision, Panjarapol, IIM Road, University Area, Ahmedabad – 380
-                    009, Gujarat, INDIA.</p>
+                <h4 class="heading_style"><span>Sindhu Bhawan</span> BSQUARE Coworking Space</h4>
+                <p>BSquare Co-Works corporate House
+                    SURFACES PLUS,
+                    Nr Avalon Hotel,
+                    Mango Garden city Road
+                    Off Sindhubhavan Road,
+                    Thaltej, Ahmedabad-380054</p>
                 <div class="d-flex justify-content-around"><span class="bi bi-envelope-fill">&nbsp;&nbsp; <a
                             href="mailto:info@bsquarebc.com"
                             class="text-black text-decoration-none">info@bsquarebc.com</a></span>
@@ -309,40 +293,37 @@
                 <a href="tel:+91 9925 122 772"><button class="">Check
                         Avaibility</button></a><br><br><br>
                 <div class="d-flex justify-content-around text-center">
-                    <div><span class="bi bi-airplane-fill  text-dark p-3 rounded rounded-3"
+                    <div><span class="bi bi-airplane-fill text-dark p-3 rounded rounded-3"
                             style="border: 1px solid rgb(0, 0, 0);"></span><br><br>
-                        <p>Airport <br>14.1 Km</p>
+                        <p>Airport <br>11.7 Km</p>
                     </div>
-                    <div><span class="bi bi-train-freight-front-fill  text-dark p-3 rounded rounded-3"
+                    <div><span class="bi bi-train-freight-front-fill text-dark p-3 rounded rounded-3"
                             style="border: 1px solid rgb(0, 0, 0);"></span><br><br>
-                        <p>Railway <br>8.3Km</p>
+                        <p>Railway <br>5.0Km</p>
                     </div>
-                    <div><span class="bi bi-train-front-fill  text-dark p-3 rounded rounded-3"
+                    <div><span class="bi bi-train-front-fill text-dark p-3 rounded rounded-3"
                             style="border: 1px solid rgb(0, 0, 0);"></span><br><br>
                         <p>Nearby <br> Metro <br>-</p>
                     </div>
-                    <div><span class="bi bi-bus-front-fill  text-dark p-3 rounded rounded-3"
+                    <div><span class="bi bi-bus-front-fill text-dark p-3 rounded rounded-3"
                             style="border: 1px solid rgb(0, 0, 0);"></span><br><br>
                         <p>BRTS<br>-</p>
                     </div>
-                    <div><span class="bi bi-hospital-fill  text-dark p-3 rounded rounded-3"
+                    <div><span class="bi bi-hospital-fill text-dark p-3 rounded rounded-3"
                             style="border: 1px solid rgb(0, 0, 0);"></span><br><br>
                         <p>Hospital<br>-</p>
                     </div>
-                    <div><span class="bi bi-buildings-fill  text-dark p-3 rounded rounded-3"
+                    <div><span class="bi bi-buildings-fill text-dark p-3 rounded rounded-3"
                             style="border: 1px solid rgb(0, 0, 0);"></span><br><br>
-                        <p>Hotel <br>1.2km</p>
+                        <p>Hotel <br>1km</p>
                     </div>
-                </div>
-                <div class="d-flex justify-content-center degree_view">
-                    <a href="https://goo.gl/maps/uET7EKrLS242" target="_blank">360 degree view</a>
                 </div>
 
             </div>
             <div class="col-xl-6 col-md-12">
                 <div class="container iframe">
                     <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3671.877304814953!2d72.54373190000001!3d23.0282768!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395f272a6a25142b%3A0x15942a4fcb5af274!2sBSQUARE%20-%20COWORKING%20SPACE%20AHMEDABAD!5e0!3m2!1sen!2sin!4v1698748480211!5m2!1sen!2sin"
+                        src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3671.3810399840345!2d72.50363707531456!3d23.046487979157064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjPCsDAyJzQ3LjQiTiA3MsKwMzAnMjIuNCJF!5e0!3m2!1sen!2suk!4v1698748706824!5m2!1sen!2suk"
                         width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
 
@@ -352,13 +333,26 @@
         <div class="container">
             <div id="gallery" class="container-fluid">
                 <div class="popup">
-                    <img src="./iim-road-img/iim-road-img1.webp" class="img-responsive" alt="IIM-A Road_img">
-                    <img src="./iim-road-img/iim-road-img2.webp" class="img-responsive" alt="IIM-A Road_img">
-                    <img src="./iim-road-img/iim-road-img3.webp" class="img-responsive" alt="IIM-A Road_img">
-                    <img src="./iim-road-img/iim-road-img4.webp" class="img-responsive" alt="IIM-A Road_img">
-                    <img src="./iim-road-img/iim-road-img5.webp" class="img-responsive" alt="IIM-A Road_img">
-                    <img src="./iim-road-img/iim-road-img6.webp" class="img-responsive" alt="IIM-A Road_img">
-                    <img src="./iim-road-img/iim-road-img7.webp" class="img-responsive" alt="IIM-A Road_img">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-1.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-2.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-3.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-4.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-5.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-6.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-7.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-8.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-9.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-10.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-11.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-12.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-13.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-14.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-15.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-16.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-17.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-18.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-19.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./sindhubhawan-img/sindhubhawan-img-20.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
                 </div>
                 <div class="showover">
                     <div class="overlay"></div>
@@ -368,10 +362,10 @@
             </div>
         </div>
         <br><br>
-
         <a id="button"></a>
+
     </div>
-    <a href="https://wa.me/9925122772?text=Hello!%0A%0AThis is [Your Name].%0AI'd like to inquire about [Your Inquiry] for IIM A Road.%0A%0APlease respond."
+    <a href="https://wa.me/9925122772?text=Hello!%0A%0AThis is [Your Name].%0AI'd like to inquire about [Your Inquiry] for Sindhu Bhavan.%0A%0APlease respond."
         class="float" target="_blank">
         <i class="fa fa-whatsapp my-float"></i>
     </a>
@@ -383,7 +377,7 @@
                     <div class="col-xl-3 col-lg-3 mb-50">
                         <div class="footer-widget">
                             <div class="footer-logo">
-                                <a href="index.html"><img src="./images/logo.JPG" class="img-fluid" alt="logo"></a>
+                                <a href="index.html"><img src="./images/logo.JPG" class="img-fluid" alt="bsquare-logo"></a>
                             </div>
                             <div class="footer-text">
                                 <p>BSQUARE is a coworking space in Ahmedabad that provides world class workspaces,
@@ -409,14 +403,14 @@
                                         <br>
                                         <h6 style="color: white; font-size: 14px;">5 Reasons Why Flexible Office Spaces and Co-Working Spaces are The Next Big Thing...</h6>
                                         <br>
-                                        <a href="bsquareblog.html?bsquare=bsquare-reasons-why-flexible-office-spaces"
+                                        <a href="bsquare-blog.html?bsquare=bsquare-reasons-why-flexible-office-spaces"
                                             target="_bquare">Read More</a>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
                                         <img src="./images/01.jpg" class="d-block w-100" alt="bsquare-blog-img">
                                         <br><h6 style="color: white; font-size: 14px;">All You Need to Know About BSQUARE Coworking Space...</h6>
                                         <br>
-                                        <a href="bsquareblog.html?bsquare=bsquare-coworking-space-blog"
+                                        <a href="bsquare-blog.html?bsquare=bsquare-coworking-space-blog"
                                             target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
@@ -427,7 +421,7 @@
                                             Workspaces...</h6>
 
                                         <br>
-                                        <a href="bsquareblog.html?bsquare=bsquare-coworking-revolution-blog"
+                                        <a href="bsquare-blog.html?bsquare=bsquare-coworking-revolution-blog"
                                             target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
@@ -437,7 +431,7 @@
                                         <h6 style="color: white; font-size: 14px;">Flexi Office Solutions: The Strategic
                                             Gamble Driving Big Revenue Boosts...</h6>
                                         <br>
-                                        <a href="bsquareblog.html?bsquare=bsquare-flexi-office-solutions-blog"
+                                        <a href="bsquare-blog.html?bsquare=bsquare-flexi-office-solutions-blog"
                                             target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
@@ -520,7 +514,7 @@
                                 <li><a href="./index.html">Home</a></li>
                                 <li><a href="./blogs.html">Blogs</a></li>
 
-                                <li><a href="./facilities.html">Facilities</a></li>
+                                <li><a href="./amenities.html">Amenities</a></li>
                                 <li><a href="./careers.html">Careers</a></li>
 
                                 <li><a href="./gallery.html">Gallery</a></li>
@@ -558,7 +552,7 @@
                 <div class="row">
                     <div class="col-xl-12 col-lg-12 text-center">
                         <div class="copyright-text">
-                            <p class="pt-4">©2023 <a href="#">BSQUARE.</a> All rights reserved
+                            <p class="pt-4">©2023 <a href="./index.html">BSQUARE.</a> All rights reserved
                             </p>
 
                         </div>
@@ -574,7 +568,6 @@
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
     <script src="./script.js"></script>
-
     <script>
         var btn = $('#button');
 
