--- a/bsquare-blog.html
+++ b/bsquare-blog.html
@@ -306,7 +306,7 @@
                                     big
                                     and small
                                     cities....</p>
-                                <a href="bsquareblog.html?bsquare=bsquare-reasons-why-flexible-office-spaces" target="_bquare" class="btn btn-primary">Read More</a>
+                                <a href="bsquare-blog.html?bsquare=bsquare-reasons-why-flexible-office-spaces" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                         <div class="card"
@@ -319,7 +319,7 @@
                                     Workspaces</h5>
                                 <p class="card-text">The world of real estate is undergoing a significant transformation, and
                                     at the heart of this change is the booming trend of co-working spaces...</p>
-                                <a href="bsquareblog.html?bsquare=bsquare-coworking-revolution-blog" target="_bquare" class="btn btn-primary">Read More</a>
+                                <a href="bsquare-blog.html?bsquare=bsquare-coworking-revolution-blog" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                         <div class="card"
@@ -331,7 +331,7 @@
                                 <h5 class="card-title">Flexi Office Solutions: The Strategic Gamble Driving Big Revenue Boosts</h5>
                                 <p class="card-text">In the ever-evolving landscape of work environments, Flexi Office
                                     Companies are making a strategic bet...</p>
-                                <a href="bsquareblog.html?bsquare=bsquare-flexi-office-solutions-blog" target="_bquare" class="btn btn-primary">Read More</a>
+                                <a href="bsquare-blog.html?bsquare=bsquare-flexi-office-solutions-blog" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
 
@@ -421,7 +421,7 @@
                                 <p class="card-text">Flexible office spaces and co-working spaces are a rage in all the big
                                     and small
                                     cities...</p>
-                                <a href="bsquareblog.html?bsquare=bsquare-reasons-why-flexible-office-spaces" target="_bquare" class="btn btn-primary">Read More</a>
+                                <a href="bsquare-blog.html?bsquare=bsquare-reasons-why-flexible-office-spaces" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                         <div class="card"
@@ -433,7 +433,7 @@
                                 <h5 class="card-title">All You Need to Know About BSQUARE Coworking Space</h5>
                                 <p class="card-text">Choosing the right kind of office space is key to making sure you have a
                                                 successful...</p>
-                                <a href="bsquareblog.html?bsquare=bsquare-coworking-space-blog" target="_bquare" class="btn btn-primary">Read More</a>
+                                <a href="bsquare-blog.html?bsquare=bsquare-coworking-space-blog" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                         <div class="card"
@@ -445,7 +445,7 @@
                                 <h5 class="card-title">Flexi Office Solutions: The Strategic Gamble Driving Big Revenue Boosts</h5>
                                 <p class="card-text">In the ever-evolving landscape of work environments, Flexi Office
                                     Companies are making a strategic bet...</p>
-                                <a href="bsquareblog.html?bsquare=bsquare-flexi-office-solutions-blog" target="_bquare" class="btn btn-primary">Read More</a>
+                                <a href="bsquare-blog.html?bsquare=bsquare-flexi-office-solutions-blog" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
 
@@ -558,7 +558,7 @@
                                 <p class="card-text">Flexible office spaces and co-working spaces are a rage in all the big
                                     and small
                                     cities...</p>
-                                <a href="bsquareblog.html?bsquare=bsquare-reasons-why-flexible-office-spaces" target="_bquare" class="btn btn-primary">Read More</a>
+                                <a href="bsquare-blog.html?bsquare=bsquare-reasons-why-flexible-office-spaces" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                         <div class="card"
@@ -571,7 +571,7 @@
                                     Workspaces</h5>
                                 <p class="card-text">The world of real estate is undergoing a significant transformation, and
                                     at the heart of this change is the booming trend of co-working spaces...</p>
-                                <a href="bsquareblog.html?bsquare=bsquare-coworking-revolution-blog" target="_bquare" class="btn btn-primary">Read More</a>
+                                <a href="bsquare-blog.html?bsquare=bsquare-coworking-revolution-blog" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                         <div class="card"
@@ -584,7 +584,7 @@
                                 <p class="card-text">Choosing the right kind of office space is key to making sure you have a
                                     successful
                                     career and get to focus on your productivity and nothing else...</p>
-                                <a href="bsquareblog.html?bsquare=bsquare-coworking-space-blog" target="_bquare" class="btn btn-primary">Read More</a>
+                                <a href="bsquare-blog.html?bsquare=bsquare-coworking-space-blog" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
 
@@ -712,7 +712,7 @@
                                 <br>
                                 <h5 class="card-title">All You Need to Know About BSQUARE Coworking Space</h5>
                                 <p class="card-text">Choosing the right kind of office space is key to making sure you have a successful career and get to focus on your productivity and nothing else. But this can ...</p>
-                                <a href="bsquareblog.html?bsquare=bsquare-coworking-space-blog" target="_bquare" class="btn btn-primary">Read More</a>
+                                <a href="bsquare-blog.html?bsquare=bsquare-coworking-space-blog" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                         <div class="card"
@@ -725,7 +725,7 @@
                                     Workspaces</h5>
                                 <p class="card-text">The world of real estate is undergoing a significant transformation, and
                                     at the heart of this change is the booming trend of co-working spaces...</p>
-                                <a href="bsquareblog.html?bsquare=bsquare-coworking-revolution-blog" target="_bquare" class="btn btn-primary">Read More</a>
+                                <a href="bsquare-blog.html?bsquare=bsquare-coworking-revolution-blog" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
                         <div class="card"
@@ -737,7 +737,7 @@
                                 <h5 class="card-title">  Flexi Office Solutions: The Strategic Gamble Driving Big Revenue Boosts</h5>
                                 <p class="card-text">>In the ever-evolving landscape of work environments, Flexi Office
                                                 Companies are making a strategic bet that's not just about providing...</p>
-                                <a href="bsquareblog.html?bsquare=bsquare-flexi-office-solutions-blog" target="_bquare" class="btn btn-primary">Read More</a>
+                                <a href="bsquare-blog.html?bsquare=bsquare-flexi-office-solutions-blog" target="_bquare" class="btn btn-primary">Read More</a>
                             </div>
                         </div>
 
@@ -783,19 +783,19 @@
                                     Locations
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                                    <a class="dropdown-item" href="./prahladnagar.html">Prahlad Nagar Corporate Road</a>
+                                    <a class="dropdown-item" href="./prahlad-nagar.html">Prahlad Nagar Corporate Road</a>
                                     <a class="dropdown-item" href="./s.g.road.html">S.G.Road</a>
 
-                                    <a class="dropdown-item" href="./iimaroad.html">IIM A Road</a>
+                                    <a class="dropdown-item" href="./iim-a-road.html">IIM A Road</a>
                                     <a class="dropdown-item" href="./navrangpura.html">Navrangpura</a>
-                                    <a class="dropdown-item" href="./sindhubhawan.html">Sindhu Bhawan</a>
+                                    <a class="dropdown-item" href="./sindhu-bhawan.html">Sindhu Bhawan</a>
                                 </div>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="./workspace.html">Workspace</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./facilities.html">Amenities</a>
+                                <a class="nav-link" href="./amenities.html">Amenities</a>
                             </li>
 
                             <li class="nav-item">
@@ -879,14 +879,14 @@
                                         <br>
                                         <h6 style="color: white; font-size: 14px;">5 Reasons Why Flexible Office Spaces and Co-Working Spaces are The Next Big Thing...</h6>
                                         <br>
-                                        <a href="bsquareblog.html?bsquare=bsquare-reasons-why-flexible-office-spaces"
+                                        <a href="bsquare-blog.html?bsquare=bsquare-reasons-why-flexible-office-spaces"
                                             target="_bquare">Read More</a>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
                                         <img src="./images/01.jpg" class="d-block w-100" alt="bsquare-blog-img">
                                         <br><h6 style="color: white; font-size: 14px;">All You Need to Know About BSQUARE Coworking Space...</h6>
                                         <br>
-                                        <a href="bsquareblog.html?bsquare=bsquare-coworking-space-blog"
+                                        <a href="bsquare-blog.html?bsquare=bsquare-coworking-space-blog"
                                             target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
@@ -897,7 +897,7 @@
                                             Workspaces...</h6>
 
                                         <br>
-                                        <a href="bsquareblog.html?bsquare=bsquare-coworking-revolution-blog"
+                                        <a href="bsquare-blog.html?bsquare=bsquare-coworking-revolution-blog"
                                             target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
@@ -907,7 +907,7 @@
                                         <h6 style="color: white; font-size: 14px;">Flexi Office Solutions: The Strategic
                                             Gamble Driving Big Revenue Boosts...</h6>
                                         <br>
-                                        <a href="bsquareblog.html?bsquare=bsquare-flexi-office-solutions-blog"
+                                        <a href="bsquare-blog.html?bsquare=bsquare-flexi-office-solutions-blog"
                                             target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
@@ -990,7 +990,7 @@
                                 <li><a href="./index.html">Home</a></li>
                                 <li><a href="./blogs.html">Blogs</a></li>
 
-                                <li><a href="./facilities.html">Facilities</a></li>
+                                <li><a href="./amenities.html">Amenities</a></li>
                                 <li><a href="./careers.html">Careers</a></li>
 
                                 <li><a href="./gallery.html">Gallery</a></li>
