--- a/prahlad-nagar.html
+++ b/prahlad-nagar.html
@@ -14,26 +14,15 @@
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
 </head>
 <style>
-    #header {
+    #header,
+    #header .carousel,
+    #header .carousel-inner,
+    #header .carousel-item {
         width: 100%;
         height: 100vh;
-    }
-
-    #header .carousel {
-        height: 100%;
-    }
-
-    #header .carousel-inner {
-        height: 100%;
-    }
-
-    #header .carousel-item {
-        height: 100%;
     }
 
     #header .title {
@@ -67,22 +56,15 @@
     }
 
 
-
-
-
     #gallery img,
     #gallery video {
-
         width: 100%;
         height: auto;
         /* margin: 4% auto; */
-
         cursor: pointer;
         -webkit-transition: all 0.2s;
         transition: all 0.2s;
     }
-
-
 
 
 
@@ -110,27 +92,6 @@
         max-width: 400px
     }
 
-    .footer-widget-heading .col-xl-6 button {
-        background-color: #0086c451;
-        border: none;
-        padding: 10px 12px;
-        width: 150px;
-        font-size: 12px;
-        font-weight: bold;
-        box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-        transition: .4s;
-    }
-
-    .footer-widget-heading .col-xl-6 button:hover {
-        background-color: #0086c451;
-        border: none;
-        padding: 10px 12px;
-        width: 150px;
-        font-size: 12px;
-        font-weight: bold;
-        box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
-        transition: .4s;
-    }
 
     .footer-widget-heading .modal .modal-dialog {
         max-width: 800px;
@@ -218,19 +179,19 @@
                                         Locations
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                                        <a class="dropdown-item" href="./prahladnagar.html">Prahlad Nagar Corporate
+                                        <a class="dropdown-item" href="./prahlad-nagar.html">Prahlad Nagar Corporate
                                             Road</a>
                                         <a class="dropdown-item" href="./s.g.road.html">S.G.Road</a>
-                                        <a class="dropdown-item" href="./iimaroad.html">IIM A Road</a>
+                                        <a class="dropdown-item" href="./iim-a-road.html">IIM A Road</a>
                                         <a class="dropdown-item" href="./navrangpura.html">Navrangpura</a>
-                                        <a class="dropdown-item" href="./sindhubhawan.html">Sindhu Bhawan</a>
+                                        <a class="dropdown-item" href="./sindhu-bhawan.html">Sindhu Bhawan</a>
                                     </div>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" aria-current="page" href="./workspace.html">Workspace</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="./facilities.html">Amenities</a>
+                                    <a class="nav-link" href="./amenities.html">Amenities</a>
                                 </li>
 
                                 <li class="nav-item">
@@ -255,10 +216,10 @@
         <div class="carousel-inner">
 
             <div class="carousel-item active" data-bs-interval="7000">
-                <img src="./images/backposters/30 (1).png" class="d-block w-100" alt="...">
+                <img src="./images/backposters/26.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption px-md-5">
-                    <h5>Sindhu Bhawan<br>
-                        <span class="tagline">(Legal and Contractual Aspects of Coworking)</span></h5>
+                    <h5>PrahladNagar corporate Road<br>
+                        <span class="tagline">(Collaborative Events and Workshops in Coworking Spaces)</span></h5>
                     <hr class="bg-light border-4 border-top border-light">
 
                 </div>
@@ -266,10 +227,11 @@
 
         </div>
     </div>
+
     <div class="container">
         <div class="section_padding"></div>
         <div class="container">
-            <h2 class="heading_style">Sindhu Bhawan <br>
+            <h2 class="heading_style">PrahladNagar corporate Road <br>
             </h2>
             <hr class="hr m-auto">
         </div>
@@ -277,29 +239,24 @@
         <br><br>
         <div class="row mb-5" id="location">
             <div class="col-xl-6 col-md-12 ">
-                <h4 class="heading_style"><span>Sindhu Bhawan</span> BSQUARE Coworking Space</h4>
-                <p>BSquare Co-Works corporate House
-                    SURFACES PLUS,
-                    Nr Avalon Hotel,
-                    Mango Garden city Road
-                    Off Sindhubhavan Road,
-                    Thaltej, Ahmedabad-380054</p>
+                <h4 class="heading_style"><span>PrahladNagar corporate Road</span> BSQUARE Coworking Space</h4>
+                <p>Westgate by True Value, Westgate 15 Floor, D block, Sarkhej - Gandhinagar Hwy, near YMCA Club,
+                    Makarba, Ahmedabad, Gujarat 380015</p>
                 <div class="d-flex justify-content-around"><span class="bi bi-envelope-fill">&nbsp;&nbsp; <a
                             href="mailto:info@bsquarebc.com"
                             class="text-black text-decoration-none">info@bsquarebc.com</a></span>
                     <span class="bi bi-telephone-fill">&nbsp;&nbsp; <a href="tel:+91 9925 122 772"
                             class="text-black text-decoration-none">+91 9925 122 772</a></span>
                 </div> <br>
-                <a href="tel:+91 9925 122 772"><button class="">Check
-                        Avaibility</button></a><br><br><br>
+                <a href="tel:+91 9925 122 772"><button class="">Check Avaibility</button></a><br><br><br>
                 <div class="d-flex justify-content-around text-center">
                     <div><span class="bi bi-airplane-fill text-dark p-3 rounded rounded-3"
                             style="border: 1px solid rgb(0, 0, 0);"></span><br><br>
-                        <p>Airport <br>11.7 Km</p>
+                        <p>Airport <br>17.6 Km</p>
                     </div>
                     <div><span class="bi bi-train-freight-front-fill text-dark p-3 rounded rounded-3"
                             style="border: 1px solid rgb(0, 0, 0);"></span><br><br>
-                        <p>Railway <br>5.0Km</p>
+                        <p>Railway<br>17.6 Km</p>
                     </div>
                     <div><span class="bi bi-train-front-fill text-dark p-3 rounded rounded-3"
                             style="border: 1px solid rgb(0, 0, 0);"></span><br><br>
@@ -315,7 +272,7 @@
                     </div>
                     <div><span class="bi bi-buildings-fill text-dark p-3 rounded rounded-3"
                             style="border: 1px solid rgb(0, 0, 0);"></span><br><br>
-                        <p>Hotel <br>1km</p>
+                        <p>Hotel <br>2km</p>
                     </div>
                 </div>
 
@@ -323,36 +280,36 @@
             <div class="col-xl-6 col-md-12">
                 <div class="container iframe">
                     <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3671.3810399840345!2d72.50363707531456!3d23.046487979157064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjPCsDAyJzQ3LjQiTiA3MsKwMzAnMjIuNCJF!5e0!3m2!1sen!2suk!4v1698748706824!5m2!1sen!2suk"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3672.5589851143677!2d72.5012256!3d23.0032393!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e9adea47bfe29%3A0xde5e8831a323a074!2sWestgate%20by%20True%20Value!5e0!3m2!1sen!2suk!4v1698750447895!5m2!1sen!2suk"
                         width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
 
                 </div>
             </div>
         </div>
+
+
+
+
+
         <div class="container">
             <div id="gallery" class="container-fluid">
                 <div class="popup">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-1.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-2.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-3.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-4.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-5.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-6.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-7.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-8.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-9.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-10.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-11.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-12.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-13.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-14.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-15.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-16.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-17.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-18.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-19.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
-                    <img src="./sindhubhawan-img/sindhubhawan-img-20.jpg" class="img-responsive" alt="sindhu-bhawan-img-bsqaure">
+                    <img src="./westgate-img/bsquare-westgate-img1.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img2.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img3.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img4.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img5.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img6.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img7.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img8.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img9.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img10.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img11.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img12.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img13.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img14.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
+                    <img src="./westgate-img/bsquare-westgate-img15.jpg" class="img-responsive" alt="prahladnagar-img-bsquare">
                 </div>
                 <div class="showover">
                     <div class="overlay"></div>
@@ -362,10 +319,10 @@
             </div>
         </div>
         <br><br>
-        <a id="button"></a>
 
+        <a id="button"></a>
     </div>
-    <a href="https://wa.me/9925122772?text=Hello!%0A%0AThis is [Your Name].%0AI'd like to inquire about [Your Inquiry] for Sindhu Bhavan.%0A%0APlease respond."
+    <a href="https://wa.me/9925122772?text=Hello!%0A%0AThis is [Your Name].%0AI'd like to inquire about [Your Inquiry] for Prahlad Nagar Corporate Road.%0A%0APlease respond."
         class="float" target="_blank">
         <i class="fa fa-whatsapp my-float"></i>
     </a>
@@ -403,14 +360,14 @@
                                         <br>
                                         <h6 style="color: white; font-size: 14px;">5 Reasons Why Flexible Office Spaces and Co-Working Spaces are The Next Big Thing...</h6>
                                         <br>
-                                        <a href="bsquareblog.html?bsquare=bsquare-reasons-why-flexible-office-spaces"
+                                        <a href="bsquare-blog.html?bsquare=bsquare-reasons-why-flexible-office-spaces"
                                             target="_bquare">Read More</a>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
                                         <img src="./images/01.jpg" class="d-block w-100" alt="bsquare-blog-img">
                                         <br><h6 style="color: white; font-size: 14px;">All You Need to Know About BSQUARE Coworking Space...</h6>
                                         <br>
-                                        <a href="bsquareblog.html?bsquare=bsquare-coworking-space-blog"
+                                        <a href="bsquare-blog.html?bsquare=bsquare-coworking-space-blog"
                                             target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
@@ -421,7 +378,7 @@
                                             Workspaces...</h6>
 
                                         <br>
-                                        <a href="bsquareblog.html?bsquare=bsquare-coworking-revolution-blog"
+                                        <a href="bsquare-blog.html?bsquare=bsquare-coworking-revolution-blog"
                                             target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
@@ -431,7 +388,7 @@
                                         <h6 style="color: white; font-size: 14px;">Flexi Office Solutions: The Strategic
                                             Gamble Driving Big Revenue Boosts...</h6>
                                         <br>
-                                        <a href="bsquareblog.html?bsquare=bsquare-flexi-office-solutions-blog"
+                                        <a href="bsquare-blog.html?bsquare=bsquare-flexi-office-solutions-blog"
                                             target="_bquare">Read More</a>
                                         <br> <br>
                                     </div>
@@ -514,7 +471,7 @@
                                 <li><a href="./index.html">Home</a></li>
                                 <li><a href="./blogs.html">Blogs</a></li>
 
-                                <li><a href="./facilities.html">Facilities</a></li>
+                                <li><a href="./amenities.html">Amenities</a></li>
                                 <li><a href="./careers.html">Careers</a></li>
 
                                 <li><a href="./gallery.html">Gallery</a></li>
@@ -552,7 +509,7 @@
                 <div class="row">
                     <div class="col-xl-12 col-lg-12 text-center">
                         <div class="copyright-text">
-                            <p class="pt-4">©2023 <a href="./index.html">BSQUARE.</a> All rights reserved
+                            <p class="pt-4">©2023 <a href="#">BSQUARE.</a> All rights reserved
                             </p>
 
                         </div>
@@ -568,6 +525,7 @@
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
     <script src="./script.js"></script>
+
     <script>
         var btn = $('#button');
 
@@ -612,6 +570,11 @@
                 $dropdown.off("mouseenter mouseleave");
             }
         });
+
+
+
+
+
     </script>
 </body>
 
