--- a/bsquare-blog.html
+++ b/bsquare-blog.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Co-working spaces | bsquare</title>
+    <title>co-working spaces | bsquare</title>
     <meta name="keywords" content="co-working spaces, shade offices, flexible workspaces, co-working spaces Ahmedabad">
     <meta name="description" content="Discover the best co-working spaces in Ahmedabad, flexible office for business">
     <link rel="icon" href="./images/favicon.png" type="image/png">
